--- a/community_meetings/2023-06-27/community_mtg_6_27_2023.Rmd
+++ b/community_meetings/2023-06-27/community_mtg_6_27_2023.Rmd
@@ -1,8 +1,7 @@
 ---
 output:
   xaringan::moon_reader:
-    self_contained: false
-    lib_dir: libs
+    self_contained: true
     nature:
       highlightLines: true
       highlightLanguage: R
@@ -14,7 +13,6 @@ output:
 
 ```
 ```{r xaringanExtra, echo=FALSE, include = FALSE}
-library(dplyr)
 # "share_again",
 xaringanExtra::use_xaringan_extra(c("tile_view", "animate_css", "scribble", "search", "webcam", "clipboard", "fit_screen", "tachyons", "editable")) 
 # xaringanExtra::use_animate_all("slide_left")
