--- a/community_meetings/2023-06-27/community_mtg_6_27_2023.Rmd
+++ b/community_meetings/2023-06-27/community_mtg_6_27_2023.Rmd
@@ -1,31 +1,49 @@
 ---
 output:
   xaringan::moon_reader:
+    css: xaringan-themer.css
     self_contained: true
     nature:
+      ratio: '16:9'
       highlightLines: true
       highlightLanguage: R
       countIncrementalSlides: false
 ---
 
+```{r xaringanExtra, echo=FALSE, include=FALSE}
+xaringanExtra::use_xaringan_extra(c(
+  "tile_view", 
+  "animate_css", 
+  "scribble", 
+  "search", 
+  "webcam", 
+  "clipboard", 
+  "fit_screen", 
+  "tachyons", 
+  "editable"
+)) 
 
-```{r startup, include=FALSE, message=FALSE, warning=FALSE, cache=TRUE}
-```
-
-```{r xaringanExtra, echo=FALSE, include = FALSE}
-# "share_again",
-xaringanExtra::use_xaringan_extra(c("tile_view", "animate_css", "scribble", "search", "webcam", "clipboard", "fit_screen", "tachyons", "editable")) 
-# xaringanExtra::use_animate_all("slide_left")
 xaringanExtra::use_extra_styles(
   hover_code_line = TRUE,         #<<
   mute_unhighlighted_code = TRUE  #<<
 )
 ```
 
+```{r startup, include=FALSE, message=FALSE, warning=FALSE, cache=TRUE}
+```
+
 layout: false
 class: title-slide, inverse, middle, main_slide
 name: title-slide
 
+```{r xaringan-logo, echo=FALSE}
+xaringanExtra::use_logo(
+  image_url = "https://raw.githubusercontent.com/pharmaR/pharmaR.github.io/preview/static/img/banners/pharmaRlogo.png",
+  width = "15vw",
+  position = xaringanExtra::css_position(bottom = "-1rem", right = "1rem"),
+  exclude_class = c("title-slide", "inverse", "hide_logo")
+)
+```
 
 # Learnings & Reflection from Case Studies
 ### What's next for the R Validation Hub
