--- a/community_meetings/2023-06-27/community_mtg_6_27_2023.Rmd
+++ b/community_meetings/2023-06-27/community_mtg_6_27_2023.Rmd
@@ -202,6 +202,21 @@ class: inverse, middle
 * Package score thresholds (low, medium, or high vs accepted/rejected) and metric weights [Aaron]
 
 
+
+
+
+```{r cran_downloads}
+
+
+
+```
+
+
+
+
+
+
+
 ---
 # Discussion Rounds (2/4)
 
