--- a/community_meetings/2023-06-27/community_mtg_6_27_2023.Rmd
+++ b/community_meetings/2023-06-27/community_mtg_6_27_2023.Rmd
@@ -196,20 +196,148 @@ class: inverse, middle
 
 * Ensuring and documenting R package reviewers have the right technical expertise [Preetham]
 
+
+
+
+
+
+
+
+
+
+
+
+
 ---
 # Discussion Rounds (1/4)
 
-* Package score thresholds (low, medium, or high vs accepted/rejected) and metric weights [Aaron]
+## Package risk scores & metric weights!
+
+--
+
+* Let's back up first! 
+
+--
+
+What is `{riskmetric}`?
+
+--
+
+**Question in the chat:**
+
+To what extent have you (or your organization) used `{riskmetric}`?
+* a. Never used it, and don't plan to
+* b. We're considering using it, but haven't gotten very far
+* c. Played with it a bit, but we don't use it formally. We came up with our own method that is...
+  * c1: similar or borrows ideas from `{riskmetric}`
+  * c2: nothing like `{riskmetric}`
+* d. We use components or all of `{riskmetric}` in our R-package validation process
 
 
 
 
 
-```{r cran_downloads}
+---
+
+# Package scores!
+
+Discussion: Do you keep track and/or use `{riskmetric}` scores as part of your review process?
+
+* **How do you feel about scores?** Do you care about them? Enter **"Care"** / **"Don't Care"** in the Chat.
+
+--
+
+Through our case study work, we've come to realize a lot of folks leverage risk categories for packages, deeming the **risk low, medium, or high**. And we added `{riskassessment}` features that allow you to set "risk decision thresholds" to automatically tag packages based on pkg score:
+
+![](images/risk_score_threshold_high.png)
+
+---
+## Package scores! (cont'd)
+
+
+![](images/Decision_auto_tagged.png)
+
+So the big question is:
+
+* How high is **too high**?
+
+--
+
+Ultimately, it's up to you. But it'd be nice to have some of consensus. Here is some data to help us make these decisions...
+
+
+---
+## We scored all of CRAN (19,715 pkgs)
+
+
+![](images/risk_scores_by_group_all_cran.png)
+**Thoughts?**
+
+---
+## (Zoom in on) Pkg Groups and Highly Downloaded
+
+
+![](images/risk_scores_by_group_prime_grps.png)
+**Thoughts?**
+
+---
+## (Zoom in on) Groups with fewer downloads
+
+<!-- <img src="images/risk_scores_by_group_fewer_dwnlds.png" height="300" style="padding-left: 70px; height:300px;"/> -->
+
+![](images/risk_scores_by_group_fewer_dwnlds.png)
+
+**Thoughts?**
+
+---
+### Package Weights!
+
+**a: news_current**: News file has an entry for the current version of the package.<br>
+**b: has_vignettes**: package contains vignettes.<br>
+**c: size_codebase**: a logistic rating of the number of lines of code in the package.<br>
+**d: has_bug_reports_url**:  package links to a location to file bug reports.<br>
+**e: bugs_status**:  fraction of the last 30 bugs which have been closed.<br>
+**f: license**: the package ships with an acceptable license.<br>
+**g: export_help**: fraction of exported objects that are documented.<br>
+**h: reverse_dependencies**: (log10) number of packages that depend on this package.<br>
+**i: downloads_1yr**: logistic rating of the number of package downloads in the past year.<br>
+**j: dependencies**:  number of package dependencies.<br>
+**k: has_website**: package has an accompanying website.<br>
+**l: r_cmd_check**: weighted sum of errors/warnings/notes from R CMD Check.<br>
+**m: remote_checks**: weighted sum of OS flavor R CMD check results.<br>
+**n: has_maintainer**:  package has a maintainer.<br>
+**o: exported_namespace**:  fraction of exported objects that are documented.<br>
+**p: has_news**:  package has a NEWS file.<br>
+**q: has_source_control**: package has an associated version-controlled repository.<br>
+**r: covr_coverage**: fraction of lines of code which are covered by a unit test.<br>
+
+In the chat - say "b up" or "d down" to upweight or downweight a metric for example!
 
 
 
-```
+---
+# Do you want the CRAN scoring data?
+
+If you complete our survey, I'll email you the data & code to reproduce my analysis. Of course, you could write a script to do it yourself too. But it took me 11 hours to run on my laptop, so taking a 10-minute survey would be waaay easier!
+
+
+<a href='https://bit.ly/risk_survey'><img src="images/google_forms_logo.png" height="180" style="padding-left: 350px; height:180px;"/></a>
+
+
+
+--
+
+### Stay tuned...
+
+* Presentation @ userR! Conf 2023 in Basel, Switzerland
+
+* Full deployment of {riskassessment} app with top 1k downloaded CRAN pkgs uploaded for companies to collaborate on
+
+
+
+
+
+
 
 
 
