--- a/community_meetings/2023-06-27/community_mtg_6_27_2023.Rmd
+++ b/community_meetings/2023-06-27/community_mtg_6_27_2023.Rmd
@@ -209,15 +209,18 @@ class: inverse, middle
 
 --
 
+<img src="images/hex-riskmetric-aspconfig.png" align="right" height="172" style="float:right; padding-right:75px; height:172px;"/>
+
 Let's back up first! 
 
---
 
 * What is `{riskmetric}`?
 
 --
 
-**Question in the chat:**
+<br>
+
+**Question for the chat:**
 
 To what extent have you (or your organization) used `{riskmetric}`?
 * a. Never used it, and don't plan to
@@ -233,15 +236,14 @@ To what extent have you (or your organization) used `{riskmetric}`?
 
 # Package scores!
 
-Discussion: Do you keep track and/or use `{riskmetric}` scores as part of your review process?
-
-* **How do you feel about scores?** Do you care about them? Enter **"Care"** / **"Don't Care"** in the Chat.
+Discussion: How do you feel about **risk scores?** Are they integral to your review process? Do you even care about them? Enter **"Care"** / **"Don't Care"** in the chat!
 
 --
 
-Through our case study work, we've come to realize a lot of folks leverage risk categories for packages, deeming the **risk low, medium, or high**. And we added `{riskassessment}` features that allow you to set "risk decision thresholds" to automatically tag packages based on pkg score:
+Through our case study work, we've seen many leverage the **low, medium, or high** risk categories. We enhanced the `{riskassessment}` app to allow users to set "risk decision thresholds" automatically, tagging packages based on pkg score:
 
-![](images/risk_score_threshold_high.png)
+<img src="images/risk_score_threshold_high.png" height="300" style="padding-left:120px; height:300px;"/>
+
 
 ---
 ## Package scores! (cont'd)
@@ -251,7 +253,7 @@ Through our case study work, we've come to realize a lot of folks leverage risk 
 
 So the big question is:
 
-* How high is **too high**?
+* How high is **too high**? Put it in the chat!
 
 --
 
@@ -263,58 +265,54 @@ Ultimately, it's up to you. But it'd be nice to have some of consensus. Here is 
 
 
 ![](images/risk_scores_by_group_all_cran.png)
-**Thoughts?**
 
 ---
-## (Zoom in on) Pkg Groups and Highly Downloaded
+## Pkg Groups and Highly Downloaded
 
 
 ![](images/risk_scores_by_group_prime_grps.png)
-**Thoughts?**
 
 ---
-## (Zoom in on) Groups with fewer downloads
+## Groups with fewer downloads
 
 <!-- <img src="images/risk_scores_by_group_fewer_dwnlds.png" height="300" style="padding-left: 70px; height:300px;"/> -->
 
 ![](images/risk_scores_by_group_fewer_dwnlds.png)
 
-**Thoughts?**
 
 ---
 ### Package Weights!
 
-**a: news_current**: News file has an entry for the current version of the package.<br>
-**b: has_vignettes**: package contains vignettes.<br>
-**c: size_codebase**: a logistic rating of the number of lines of code in the package.<br>
-**d: has_bug_reports_url**:  package links to a location to file bug reports.<br>
-**e: bugs_status**:  fraction of the last 30 bugs which have been closed.<br>
-**f: license**: the package ships with an acceptable license.<br>
-**g: export_help**: fraction of exported objects that are documented.<br>
-**h: reverse_dependencies**: (log10) number of packages that depend on this package.<br>
-**i: downloads_1yr**: logistic rating of the number of package downloads in the past year.<br>
-**j: dependencies**:  number of package dependencies.<br>
-**k: has_website**: package has an accompanying website.<br>
-**l: r_cmd_check**: weighted sum of errors/warnings/notes from R CMD Check.<br>
-**m: remote_checks**: weighted sum of OS flavor R CMD check results.<br>
-**n: has_maintainer**:  package has a maintainer.<br>
-**o: exported_namespace**:  fraction of exported objects that are documented.<br>
-**p: has_news**:  package has a NEWS file.<br>
-**q: has_source_control**: package has an associated version-controlled repository.<br>
-**r: covr_coverage**: fraction of lines of code which are covered by a unit test.<br>
+a: **news_current**: News file has an entry for the current version of the package.<br>
+b: **has_vignettes**: package contains vignettes.<br>
+c: **size_codebase**: a logistic rating of the number of lines of code in the package.<br>
+d: **has_bug_reports_url**:  package links to a location to file bug reports.<br>
+e: **bugs_status**:  fraction of the last 30 bugs which have been closed.<br>
+f: **license**: the package ships with an acceptable license.<br>
+g: **export_help**: fraction of exported objects that are documented.<br>
+h: **reverse_dependencies**: (log10) number of packages that depend on this package.<br>
+i: **downloads_1yr**: logistic rating of the number of package downloads in the past year.<br>
+j: **dependencies**:  number of package dependencies.<br>
+k: **has_website**: package has an accompanying website.<br>
+l: **r_cmd_check**: weighted sum of errors/warnings/notes from R CMD Check.<br>
+m: **remote_checks**: weighted sum of OS flavor R CMD check results.<br>
+n: **has_maintainer**:  package has a maintainer.<br>
+o: **exported_namespace**:  fraction of exported objects that are documented.<br>
+p: **has_news**:  package has a NEWS file.<br>
+q: **has_source_control**: package has an associated version-controlled repository.<br>
+r: **covr_coverage**: fraction of lines of code which are covered by a unit test.<br>
 
-**In the chat** - say "b up" or "d down" to upweight or downweight a metric for example!
+In the chat - say **'up-weight covr_coverage'** or 'up-weight r' or to up-weight or down-weight a metric! 
 
 
 
 ---
-# Do you want the CRAN scoring data?
+# Do you want scoring data for CRAN?
 
-If you complete our survey, I'll email you the data (and code to reproduce my analysis). Of course, you could write a script to do it yourself. But it took me 10 hours to run on my laptop, so taking a 10-minute survey would be waaay easier!
+If you complete our survey, I'll send the data (and code to reproduce my analysis). Of course, you could write a script to do it yourself. But it took 10 hours to run on my laptop, so taking a 10-minute survey would be waaaay easier!
 
 
 <a href='https://bit.ly/risk_survey'><img src="images/google_forms_logo.png" height="180" style="padding-left: 350px; height:180px;"/></a>
-
 
 
 --
@@ -323,7 +321,7 @@ If you complete our survey, I'll email you the data (and code to reproduce my an
 
 * Presentation @ userR! Conf 2023 in Basel, Switzerland
 
-* Full deployment of {riskassessment} app with top 1k downloaded CRAN pkgs uploaded for companies to collaborate on
+* Full deployment of `{riskassessment}` app with top 1k downloaded CRAN pkgs uploaded for companies to collaborate on
 
 
 
