Fix speed problem

--- a/community_meetings/2023-06-27/community_mtg_6_27_2023.Rmd
+++ b/community_meetings/2023-06-27/community_mtg_6_27_2023.Rmd
@@ -13,17 +13,17 @@ output:
 ---
 
 ```{r xaringanExtra, echo=FALSE, include=FALSE}
-xaringanExtra::use_xaringan_extra(c(
-  "tile_view", 
-  "animate_css", 
-  "scribble", 
-  "search", 
-  "webcam", 
-  "clipboard", 
-  "fit_screen", 
-  "tachyons", 
-  "editable"
-)) 
+# xaringanExtra::use_xaringan_extra(c(
+#   "tile_view", 
+#   "animate_css", 
+#   "scribble", 
+#   "search", 
+#   "webcam", 
+#   "clipboard", 
+#   "fit_screen", 
+#   "tachyons", 
+#   "editable"
+# )) 
 
 xaringanExtra::use_extra_styles(
   hover_code_line = TRUE,         #<<
