--- a/useR_2023/riskassessment/useR_riskassessment_presentation_LA.qmd
+++ b/useR_2023/riskassessment/useR_riskassessment_presentation_LA.qmd
@@ -16,8 +16,9 @@ editor: visual
 
 ::: {.column width="20%"}
 <!-- ![](images/riskassessment_logo.png)  -->
-
-<img src="images/riskassessment_logo.png" height="172" style="height:172px;"/> ![](images/pharmaverse_logo.png)
+<!-- <img src="images/riskassessment_logo.png" height="172" style="height:172px;"/> -->
+<!-- <img src="images/pharmaverse_logo.png" height="172" style="height:172px;"/> -->
+![](images/riskassessment_logo_small.png) ![](images/pharmaverse_logo.png)
 :::
 :::
 
@@ -46,14 +47,8 @@ editor: visual
 ![](images/riskmetric_logo.png) <br><br> ![](images/riskassessment_logo.png)
 :::
 
-::: {.column width="75%"}
-<br>
-<p style="font-size:30px">is a framework to quantify an R package's "risk" by assessing several meaningful metrics designed to evaluate package development best practices, code documentation, community engagement, and development sustainability. 
-<br>
-<br>
-<br>
-<br>
-is a full-fledged R package containing a shiny front-end that augments the utility of `{riskmetric}`. The application's goal is to provide a central hub for an organization to review and assess the risk of R packages, providing handy tools and guide rails along the way.</p>
+::: {.column width="75%" style="font-size:28px"}
+is a framework to quantify an R package's "risk" by assessing several meaningful metrics designed to evaluate package development best practices, code documentation, community engagement, and development sustainability.<br><br><br> is a full-fledged R package containing a shiny front-end that augments the utility of `{riskmetric}`. The application's goal is to provide a central hub for an organization to review and assess the risk of R packages, providing handy tools and guide rails along the way.
 :::
 :::
 
@@ -66,7 +61,8 @@ is a full-fledged R package containing a shiny front-end that augments the utili
 
 ::: {.column width="80%"}
 <!-- Sometimes "quality" is measurable! Software dev best practices dictate an R-package should have:<br> -->
-<div style="font-size:32px">
+
+::: {style="font-size:28px"}
 -   A license
 -   Source code available for browsing
 -   An easy to contact maintainer
@@ -76,7 +72,7 @@ is a full-fledged R package containing a shiny front-end that augments the utili
 -   Adequate test coverage
 -   Community usage
 -   18 total assessments (to date)!
-</div>
+:::
 :::
 :::
 
@@ -90,31 +86,29 @@ is a full-fledged R package containing a shiny front-end that augments the utili
 ::: {.column width="80%"}
 <!-- The app extends the functionality of {riskmetric} by managing the review process <b>within an organizational context</b>, empowering the reviewer to: <br> -->
 
-<div style="font-size:32px">
+::: {style="font-size:28px"}
 -   Analyze `{riskmetric}` output without the need to write R code
 -   Run `{riskmetric}` on the same machine with the same environment -- creating central hub for reproducibility of risk scores
 -   Facilitate and store communication on certain packages / metrics
 -   Automatic package categorization with an overall decision based on `{riskmetric}` scores
 -   Generate dynamic reports
 -   Leverage user authentication with user role management
-</div>
+:::
 :::
 :::
 
 ## Demo
 
-<br>
-<br>
+<br> <br>
 
 ::: columns
 ::: {.column width="20%"}
 ![](images/riskassessment_logo_large.png)
 :::
 
-::: {.column width="80%"}
+::: {.column width="80%" style="font-size:56px"}
 <br>
-
-<p style="font-size:56px">[Shinyapps.io](https://rinpharma.shinyapps.io/riskassessment_v100_dev/)</p>
+[Shinyapps.io](https://rinpharma.shinyapps.io/riskassessment_v100_dev/)
 :::
 :::
 
@@ -122,19 +116,27 @@ is a full-fledged R package containing a shiny front-end that augments the utili
 
 #### {riskscore}
 
-<p style="font-size:28px">In it's early stages, a new data package containing the `{riskmetric}` assessments & scores for all packages on CRAN.</p>
-
+::: columns
+::: {.column width="30%" style="font-size:28px"}
+In it's early stages, a new data package containing the `{riskmetric}` assessments & scores for all packages on CRAN.
+:::
+::: {.column width="70%"}
 ![](images/risk_scores_by_group_all_cran.png)
+:::
+:::
 
-## Coming soon (Cont'd)
+## Coming soon
 
 #### Package Explorer
 
-<p style="font-size:28px"> A suite of hands-on review tools (from our friends at GSK) will allow users to browse unit tests, source code, and man (doc) pages for any exported function.</p>
-
-![](images/pkg_explorer2.png)
-
-
+::: columns
+::: {.column width="30%" style="font-size:28px"}
+A suite of hands-on review tools (from our friends at GSK) will allow users to browse unit tests, source code, and man (doc) pages for any exported function.
+:::
+::: {.column width="70%"}
+![](images/pkg_explorer.png)
+:::
+:::
 
 ## Dev Team
 
